tools/hermes/tests/fixtures/span_multibyte_offsets/expected.stderr
  × fire
   ╭─[[PROJECT_ROOT]/src/lib.rs:1:8]
 1 │ pub fn föö() {}
   ·        ─┬─
   ·         ╰── hot
 2 │ 
   ╰────

Error: Diagnostic error in charon
